@@ -8,18 +8,19 @@ from plone.memoize.instance import memoize
 
 
 class Renderer(base.Renderer):
+
     def __init__(self, context, request, view, manager, data):
         base.Renderer.__init__(self, context, request, view, manager, data)
         self.selector = TranslatableLanguageSelector(context, request, None, None)
         self.selector.update()
         self.languages = self.selector.languages()
         self.languages.sort(key=operator.itemgetter("native"))
-        portal_state = getMultiAdapter((context, request), 
+        portal_state = getMultiAdapter((context, request),
                                        name=u'plone_portal_state')
         self.portal_url = portal_state.portal_url()
 
     def show(self):
-        return self.selector.available() and len(self.languages)>1
+        return self.selector.available() and len(self.languages) > 1
 
     def showFlags(self):
         return self.selector.showFlags()
@@ -51,4 +52,3 @@ class Renderer(base.Renderer):
             updater(lang)
 
         return self.languages
-
